# news-aggregator-pro

./: .dockerignore  .env.example  .gitignore  Dockerfile  INSTALL_AI.txt  QUICK_START_LOCAL.txt  README.md  cleanup_articles.py  clear_database.sh  cli.py  docker-compose.yml  docker_clean_all.sh  docker_clean_rebuild_all.sh  docker_logs.sh  docker_rebuild.sh  docker_restart_quick.sh  generate_rss.py  git_push.sh  install_models.sh  migrate_db.py  migrate_ollama_models.sh  process_articles.py  process_existing_articles.py  publish_pending.py  publish_to_telegram.py  pyproject.toml  requirements-actions.txt  requirements-ai.txt  requirements.txt  requirements_local.txt  run_full_pipeline.py  run_full_pipeline_fixed.py  run_scraper.py  scrape_via_api.py  show_config.py  streamlit_n8n_manager.py  telegram_tool.py  test_style_agent.py
cache/: openrouter_models.json
config/: models.yaml
docker/: init-db.sql
docs/: DIRECTUS_GUIDE.md  FIXES_APPLIED.md  FULL_PIPELINE_FLOW_EXPLAINED.md  MODELS.md  MODELS_GUIDE.md  MODES_GUIDE.md  OLLAMA_MODELS_MIGRATION.md  QUICKSTART.md  SCRAPER_GUIDE.md  STYLE_NORMALIZATION_GUIDE.md  TELEGRAM_INTEGRATION_GUIDE.md  feed.xml
examples/: examples_enable_fallback.py  examples_models_v4.py  telegraph_integration.py
ollama_models/: id_ed25519  id_ed25519.pub
scripts/: setup.sh  test_openrouter.py
src/: __init__.py  main.py
streamlit_app/: Dockerfile  app.py  models.py  requirements.txt  settings_page.py
tests/: test_n8n_integration.py  test_openrouter_system.py
web/: admin_routes.py  app.py  article.html  railway.json  (+1 more)
(+71 files in other folders)
